--- a/profile-card-component-main/style.css
+++ b/profile-card-component-main/style.css
@@ -36,7 +36,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 150px auto;
-    position: relative;
+    position: absolute;
   }
   
 
